// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineDiagram it renders 1`] = `
Array [
  <h3>
    Stops
  </h3>,
  <div
    className="m-schedule-line-diagram__stop"
  >
    <div
      className="m-schedule-line-diagram__card-left"
    >
      <div
        className="m-schedule-line-diagram__stop-name"
      >
        <a
          href="/stops/5547"
        >
          <h4>
            Elm St opp Haskell Ave
          </h4>
        </a>
      </div>
      <div
        className="m-schedule-line-diagram__connections"
      >
        <a
          data-animation="false"
          data-original-title="Route 110"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/110/line"
          title="Route 110"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            110
          </span>
        </a>
      </div>
    </div>
    <div>
      <div
        className="m-schedule-line-diagram__features"
      />
    </div>
  </div>,
  <div
    className="m-schedule-line-diagram__stop"
  >
    <div
      className="m-schedule-line-diagram__card-left"
    >
      <div
        className="m-schedule-line-diagram__stop-name"
      >
        <a
          href="/stops/place-north"
        >
          <h4>
            North Station
          </h4>
        </a>
      </div>
      <div
        className="m-schedule-line-diagram__connections"
      >
        <a
          data-animation="false"
          data-original-title="Orange Line"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/Orange/line"
          title="Orange Line"
        >
          <span
            className="m-schedule-line-diagram__connection"
          >
            <span
              aria-hidden="false"
              className="notranslate c-svg__icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Green Line C"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/Green-C/line"
          title="Green Line C"
        >
          <span
            className="m-schedule-line-diagram__connection"
          >
            <span
              aria-hidden="false"
              className="notranslate c-svg__icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Green Line E"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/Green-E/line"
          title="Green Line E"
        >
          <span
            className="m-schedule-line-diagram__connection"
          >
            <span
              aria-hidden="false"
              className="notranslate c-svg__icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Fitchburg Line"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/CR-Fitchburg/line"
          title="Fitchburg Line"
        >
          <span
            className="m-schedule-line-diagram__connection"
          >
            <span
              aria-hidden="false"
              className="notranslate c-svg__icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
    <div>
      <div
        className="m-schedule-line-diagram__features"
      >
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-parking-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-acessible-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          className="c-icon__cr-zone m-schedule-line-diagram__feature-icon"
        >
          Zone 1A
        </span>
      </div>
    </div>
  </div>,
  <div
    className="m-schedule-line-diagram__stop"
  >
    <div
      className="m-schedule-line-diagram__card-left"
    >
      <div
        className="m-schedule-line-diagram__stop-name"
      >
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-alerts-triangle"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          className="sr-only"
        >
          Service alert or delay
        </span>
         
        <a
          href="/stops/place-alfcl"
        >
          <h4>
            Alewife
          </h4>
        </a>
      </div>
      <div
        className="m-schedule-line-diagram__connections"
      >
        <a
          data-animation="false"
          data-original-title="Route 62"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/62/line"
          title="Route 62"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            62
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Route 67"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/67/line"
          title="Route 67"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            67
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Route 76"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/76/line"
          title="Route 76"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            76
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Route 79"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/79/line"
          title="Route 79"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            79
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Route 84"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/84/line"
          title="Route 84"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            84
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Route 350"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/350/line"
          title="Route 350"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            350
          </span>
        </a>
        <a
          data-animation="false"
          data-original-title="Route 351"
          data-placement="bottom"
          data-selector="true"
          data-toggle="tooltip"
          data-trigger="focus"
          href="/schedules/351/line"
          title="Route 351"
        >
          <span
            className="c-icon__bus-pill--small m-schedule-line-diagram__connection u-bg--bus"
          >
            351
          </span>
        </a>
      </div>
    </div>
    <div>
      <div
        className="m-schedule-line-diagram__features"
      >
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-parking-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-acessible-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`can render green line 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Eastbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
          >
            All branches
             
            <span
              aria-hidden="true"
              className="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`it renders a bus component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern"
            onClick={[Function]}
            onKeyUp={[Function]}
          >
            Pattern 2
             
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`it renders a subway component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <div
          className="m-schedule-direction__route-pattern"
        >
          End
        </div>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;
